--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: 孔雅琳的小窝
 email: 236115513@qq.com
 description: > # this means to ignore newlines until "baseurl:"
-"不知道怎么滴就进化成了一只程序猿"
+  一只呆萌的程序猿
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 weibo_username: kongyalin
@@ -25,6 +25,7 @@ github_username:  kongyalin
 # Build settings
 markdown: kramdown
 theme: jekyll-theme-merlot
+#theme: minima
 gems:
   - jekyll-feed
 exclude:
