--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Merlot theme
-description: Merlot is a theme for GitHub Pages.
-show_downloads: true
+title: 空雅之林
+description: 大家好，我是一只呆萌的程序猿~
+show_downloads: false
 google_analytics:
 theme: 
